# Aind.Behavior.Pirouette

./: .gitignore  README.md  dklnsk  pyproject.toml
.github/workflows/: pirouette-cicd.yml
bonsai/: Bonsai.config  NuGet.config
docs/references/: aind-deployment.md  animal-handling-chronic-recordings.md
examples/: example.py  rig.py  session.py
firmware/commutator/: commutator.ino
scripts/: runme.cmd
src/: AccumulatedCommutatorTurnsRecovery.txt  AccumulatedMagnetTurnsRecovery.txt  Extensions.csproj  HeadstageTest.bonsai  Pirouette.bonsai  ThermistorTest.bonsai  WrappedPirouette.bonsai  test_deserialization.bonsai
src/DataSchemas/: aind_behavior_pirouette.json  aind_behavior_pirouette_rig.json  aind_behavior_pirouette_task_logic.json
src/DataSchemas/aind_behavior_pirouette/: regenerate.py  rig.py  task_logic.py
src/Extensions/: AindBehaviorPirouette.Generated.cs  AindBehaviorPirouetteRig.Generated.cs  AindBehaviorPirouetteRig.cs  AindBehaviorPirouetteTaskLogic.cs  AindBehaviorSessionModel.Generated.cs  AindBehaviorSessionModel.cs  AutoCommutator.bonsai  Camera.bonsai  CameraController.bonsai  Cameras.bonsai  CamerasLogger.bonsai  Commutator.bonsai  CommutatorControlUI.bonsai  CommutatorLogging.bonsai  HarpDevices.bonsai  HarpLogging.bonsai  HarpOutputExpander.bonsai  HarpOutputExpanderGetMetadata.bonsai  HarpWhiteRabbit.bonsai  LogController.bonsai  LogData.bonsai  Magnetometer.bonsai  Onix.bonsai  OnixBehavior.bonsai  OnixEcephys.bonsai  OnixEphys.bonsai  OnixLogging.bonsai  RobocopyRoutine.bonsai  Visualizers.bonsai
src/MagnetometerDriver/: readAngle.ino
src/aind_behavior_pirouette/: cli.py  regenerate.py  rig.py
tests/: test_bonsai.py
